src/tpm/astro.h

/* EXTERN_START */
/*extern M3 eplane(V6 v1, V6 v2);
  extern M3 fplane(V6 v);
extern M3 nutate_m(double tdt);*/
extern M6 precess_m(double j1, double j2, int pflag, int sflag);
extern V6 aberrate(V6 p, V6 e, int flag);
/*extern V6 altaz(V6 object, V6 zenith);*/
extern V6 azel2hadec(V6 v6, double latitude);
extern V6 barvel(double tdb);
extern V6 cat2v6r1(double r, double d, double rd, double dd, double px, double rv, double C);
extern V6 cat2v6r2(double r, double d, double rd, double dd, double px, double rv, double C);
extern V6 cat2v6u1(double r, double d, double rd, double dd, double px, double rv, double C);
extern V6 cat2v6u2(double r, double d, double rd, double dd, double px, double rv, double C);
/*extern V6 com2cof(double et, V6 moon);*/
extern V6 ecl2equ(V6 v6, double obl);
extern V6 ellab(double tdt, V6 star, int flag);
extern V6 equ2ecl(V6 v6, double obl);
extern V6 equ2gal(V6 v6);
extern V6 eterms(double ep);
extern V6 fk425(V6 v);
extern V6 fk524(V6 v);
extern V6 gal2equ(V6 v6);
extern V6 geod2geoc(double lon, double lat, double alt);
/*extern V6 geoid(V6 position, V6 direction, double h0);*/
extern V6 hadec2azel(V6 v6, double latitude);
/*extern V6 hadec2radec(V6 v6, double last);
  extern V6 helvel(double tdb);*/
extern V6 ldeflect(V6 s, V6 e, int flag);
/*extern V6 lonlat(double ut1, V6 v);
  extern V6 nutate(double j, V6 v6, int dir);
  extern V6 observer(double tdb, double lon, double lat, double h);*/
extern V6 precess(double j1, double j2, V6 v6, int pflag);
extern V6 proper_motion(V6 v6, double t, double t0);
/*extern V6 radec2hadec(V6 v6, double last);
  extern V6 v2r(double v, double n, double a, double e);*/
extern char *tpm_state(int state);
/*extern double E2v(double E, double e);
  extern double M2E(double M, double e);
extern double ae2ha(double az, double el, double lat);
extern double ae2pa(double az, double el, double lat);*/
extern double delta_AT(double utc);
extern double delta_ET(double utc);
extern double delta_T(double ut1);
extern double delta_TT(double utc);
extern double delta_UT(double utc);
extern double eccentricity(double tdt);
extern double eccentricity_dot(double tdt);
/*extern double eq_equinox(double tdt);
  extern double eq_time(double tdt);*/
extern double func(double z);
/*extern double nut_longitude(double tdt);
  extern double nut_obliquity(double tdt);
  extern double obj2lha(V6 object, V6 obs);*/
extern double obliquity(double tdt);
extern double obliquity_dot(double tdt);
extern double refract(double zx, double refa, double refb, int flag);
extern double refraction(double zobs, double lat, double alt, double T, double P, double rh, double lambda, double eps);
/*extern double shadow_altitude(V3 E, V3 G, V3 T, double height);
  extern double shadow_distance(V3 E, V3 G, V3 T, double height);*/
extern double solar_perigee(double tdt);
extern double solar_perigee_dot(double tdt);
/*extern double tdb2tdt(double tdb);*/
extern double tdt2tdb(double tdt);
extern double theta(double j1, double j2, int pflag);
extern double thetadot(double j1, double j2, int pflag);
extern double ut12gmst(double ut1);
/*extern double zd2airmass(double zd);*/
extern double zee(double j1, double j2, int pflag);
extern double zeedot(double j1, double j2, int pflag);
extern double zeta(double j1, double j2, int pflag);
extern double zetadot(double j1, double j2, int pflag);
/*extern int n_cons_data(void);
  extern int n_star_data(void);*/
extern int tpm(V6 *pvec, int s1, int s2, double ep, double eq, TPM_TSTATE *tstate);
extern void atm(double r, double *n, double *dndr);
/*extern void draw_saturn(V3 z);*/
extern void evp(double tdb, V6 *v6b, V6 *v6h);
/*extern void geoc2geod(double *lon, double *lat, double *h, V6 g);*/
extern void nutations(double tdt, double *delta_phi, double *delta_eps);
extern void refco(double lat, double alt, double T, double P, double rh, double lambda, double eps, double *refa, double *refb);
extern void tpm_data(TPM_TSTATE *p, int flags);
/*extern void tpm_status(FILE *fp, TPM_TSTATE *p);*/
extern void v6r2cat(double *r, double *d, double *rd, double *dd, double *px, double *rv, V6 v6, double C);
extern void v6u2cat(double *r, double *d, double *rd, double *dd, double *px, double *rv, V6 v6, double C);